// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a message when there are no plays 1`] = `
Array [
  17724,
  "No plays :sad_panda:",
]
`;

exports[`creates a messages when plays exist 1`] = `
Array [
  17724,
  "*Toplist*
1. <@1337> (5)
2. <@1338> (3)",
]
`;
